--- a/index.html
+++ b/index.html
@@ -17,36 +17,40 @@
     <div class="container">
         <header>
             <div class="chat-header">
-                <div class="logo">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%234285f4'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z'/%3E%3C/svg%3E" alt="Logo" class="logo-img">
-                    <h1>چت هوشمند</h1>
+                <div class="header-left">
+                    <div class="logo">
+                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%234285f4'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z'/%3E%3C/svg%3E" alt="Logo" class="logo-img">
+                        <h1>چت هوشمند</h1>
+                    </div>
+                    <div class="model-info">
+                        <span>مدل:</span>
+                        <span id="selected-model-name" class="model-name">انتخاب نشده</span>
+                    </div>
                 </div>
-                <div class="model-info">
-                    <span>مدل انتخاب شده:</span>
-                    <span id="selected-model-name">انتخاب نشده</span>
-                </div>
-                <div class="tone-selector">
-                    <select id="tone-select">
-                        <option value="normal">لحن عادی</option>
-                        <option value="formal">لحن رسمی</option>
-                        <option value="casual">لحن غیر رسمی</option>
-                        <option value="friendly">لحن دوستانه</option>
-                        <option value="professional">لحن حرفه‌ای</option>
-                        <option value="humorous">لحن طنزگونه</option>
-                        <option value="childish">لحن کودکانه</option>
-                        <option value="poetic">لحن شاعرانه</option>
-                    </select>
-                </div>
-                <div class="header-actions">
-                    <button class="model-select-btn" title="انتخاب مدل">
-                        <i class="fas fa-robot"></i>
-                    </button>
-                    <button class="history-btn" title="تاریخچه چت">
-                        <i class="fas fa-history"></i>
-                    </button>
-                    <button class="settings-btn" title="تنظیمات">
-                        <i class="fas fa-cog"></i>
-                    </button>
+                <div class="header-right">
+                    <div class="tone-selector">
+                        <select id="tone-select">
+                            <option value="normal">لحن عادی</option>
+                            <option value="formal">لحن رسمی</option>
+                            <option value="casual">لحن غیر رسمی</option>
+                            <option value="friendly">لحن دوستانه</option>
+                            <option value="professional">لحن حرفه‌ای</option>
+                            <option value="humorous">لحن طنزگونه</option>
+                            <option value="childish">لحن کودکانه</option>
+                            <option value="poetic">لحن شاعرانه</option>
+                        </select>
+                    </div>
+                    <div class="header-actions">
+                        <button class="model-select-btn" title="انتخاب مدل">
+                            <i class="fas fa-robot"></i>
+                        </button>
+                        <button class="history-btn" title="تاریخچه چت">
+                            <i class="fas fa-history"></i>
+                        </button>
+                        <button class="settings-btn" title="تنظیمات">
+                            <i class="fas fa-cog"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </header>
